--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="content">
                     <img class="my-picture" src="/home/zach/Front_End_Nanodegree/About Me Source Code/FE Nanodegree Project 0/images/SpoonFace.jpg" alt="This is a picture of me">
                     <p class="iama">My name is...</p>
-                    <p class="my-name my-info">Zach Westphal</p>
+                    <p class="my-name my-info">Zachary Westphal</p>
                     <p class="iama">I want to be...</p>
                     <p class="my-info">a front-end master</p>
                 </div>
